# the36hz-vst-plugins

./: CMakeLists.txt  README.md
NoiseMaker/: CMakeLists.txt
NoiseMaker/include/: NoisemakerController.h  NoisemakerIds.h  NoisemakerProcessor.h  NoisemakerWaveSource.h  version.h
NoiseMaker/source/: NoisemakerController.cpp  NoisemakerFactory.cpp  NoisemakerProcessor.cpp  NoisemakerWaveSource.cpp
helloworld/: CMakeLists.txt
helloworld/include/: HelloGUI.h  plugcontroller.h
helloworld/source/: HelloGUI.cpp  plugcontroller.cpp
